update hide and show in login form

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <body>
     <button class="btn-login">Login</button>
     <div class="overlay"></div>
-    <div class="loginform">
+    <div class="loginform" onclick="showModal" ondbclick="closeModal">
         <span>&times;</span>
         <form action="" method="">
             <div>
